# metastack-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  WORKFLOW.md  build.rs  validation.md
.github/workflows/: quality.yml  release.yml
docs/: agent-daemon.md  cron-workflows.md  linear-workflow-state-creation.md  listen-phased-execution-spec.md  manual-releases.md  terminal-theme.md  workflows-run-tui.md
scripts/: install-meta.sh  release-artifacts.sh
src/: agent_provider.rs  backlog.rs  backlog_defaults.rs  backlog_dependencies.rs  backlog_improve.rs  backlog_release.rs  backlog_spec.rs  branding.rs  cli.rs  codebase_context.rs  config.rs  config_command.rs  config_resolution.rs  context.rs  cron.rs  cron_dashboard.rs  doctor.rs  fs.rs  github_pr.rs  groom.rs  lib.rs  main.rs  merge.rs  merge_dashboard.rs  onboarding.rs  orchestrate.rs  output.rs  plan.rs  progress.rs  release.rs  repo_target.rs  review.rs  scaffold.rs  scan.rs  scan_dashboard.rs  scan_prompts.rs  session_runtime.rs  setup.rs  sync_command.rs  sync_dashboard.rs  (+7 more)
src/agent_provider/: claude.rs  codex.rs  mod.rs  validation.rs
src/agents/: brief.rs  execution.rs  mod.rs  resolution.rs
src/artifacts/: REVIEW.md  SPEC_INSTRUCTIONS.md  VIEW_LINEAR.md  injected-agent-workflow-contract.md
src/artifacts/BACKLOG_TEMPLATE/: README.md  checklist.md  contacts.md  decisions.md  implementation.md  index.md  proposed-prs.md  risks.md  specification.md  validation.md
src/artifacts/BACKLOG_TEMPLATE/artifacts/: README.md  artifact-template.md
src/artifacts/BACKLOG_TEMPLATE/context/: README.md  context-note-template.md
src/artifacts/BACKLOG_TEMPLATE/tasks/: README.md  workstream-template.md
src/artifacts/cron/: README.md  github-pr-review-sample.md  linear-triage-sample.md
src/artifacts/workflows/: README.md  backlog-planning.md  incident-triage.md  pr-review.md  ticket-implementation.md
src/cron/: runtime.rs
src/improve/: dashboard.rs  execution.rs  mod.rs  state.rs  store.rs  workspace.rs
src/linear/: browser.rs  command.rs  create.rs  dashboard.rs  edit.rs  mod.rs  refine.rs  render.rs  service.rs  ticket_context.rs  transport.rs  types.rs
src/linear/service/: assets.rs  catalog.rs  issues.rs  resolution.rs  test_support.rs  tests.rs  workpad.rs
src/linear/transport/: attachments.rs  comments.rs  graphql.rs  issues.rs  labels.rs  model.rs  pagination.rs  projects.rs  teams.rs  tests.rs  uploads.rs  viewer.rs
src/listen/: dashboard.rs  mod.rs  preflight.rs  state.rs  store.rs  web.rs  worker.rs  workpad.rs  workspace.rs
src/orchestrate/: backlog.rs  dashboard.rs  mod.rs  review.rs  staging.rs  state.rs
src/review/: dashboard.rs  mod.rs  state.rs  store.rs
src/tui/: fields.rs  keybindings.rs  markdown.rs  mod.rs  prompt_images.rs  scroll.rs  spaced_list.rs  theme.rs
tests/: agents_improve.rs  backlog_dependencies.rs  backlog_improve.rs  backlog_spec.rs  commands.rs  config.rs  context.rs  cron.rs  doctor.rs  groom.rs  install_release.rs  linear.rs  listen.rs  merge.rs  orchestrate.rs  plan.rs  refine.rs  release.rs  release_artifacts.rs  release_workflow.rs  review.rs  scan.rs  sync.rs  technical.rs  upgrade.rs  workflows.rs  workspace.rs
tests/support/: common.rs
