[package]
name = "metastack-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Agent orchestration CLI that polls Linear, creates per-issue workspaces, and runs coding agents unattended"
repository = "https://github.com/metastack-dev/metastack-cli"
homepage = "https://github.com/metastack-dev/metastack-cli"
readme = "README.md"
keywords = ["cli", "agents", "linear", "orchestration", "automation"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"
default-run = "meta"
autobins = false
exclude = [
    ".github/",
    "docs/",
    "tests/",
    "scripts/",
    "Makefile",
    ".metastack/",
    "AGENTS.md",
    "WORKFLOW.md",
]

[[bin]]
name = "meta"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
cron = "0.15.0"
crossterm = "0.29.0"
ignore = "0.4.25"
libc = "0.2.183"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "1.0.6"
unicode-width = "0.2.2"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.2.0"
httpmock = "0.8.3"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
