[package]
name = "metastack-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Agent orchestration CLI that polls Linear, creates per-issue workspaces, and runs coding agents unattended"
repository = "https://github.com/0xintuition/intuition-harness-cli"
homepage = "https://github.com/0xintuition/intuition-harness-cli"
readme = "README.md"
keywords = ["cli", "agents", "linear", "orchestration", "automation"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"
default-run = "intu"
autobins = false
exclude = [
    ".github/",
    "docs/",
    "tests/",
    "scripts/",
    "Makefile",
    # Must match [package.metadata.branding] project_dir
    ".metastack/",
    "AGENTS.md",
    "WORKFLOW.md",
]

[package.metadata.branding]
command_name = "intu"
project_dir = ".intuition"
display_name = "Intuition"

[[bin]]
name = "intu"
path = "src/main.rs"

[build-dependencies]
toml = "1.0.6"
walkdir = "2.5.0"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
cron = "0.15.0"
crossterm = "0.29.0"
flate2 = "1.1.5"
ignore = "0.4.25"
image = "0.25.8"
libc = "0.2.183"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tar = "0.4.44"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "1.0.6"
unicode-width = "0.2.2"
walkdir = "2.5.0"
tempfile = "3.27.0"

[dev-dependencies]
assert_cmd = "2.2.0"
httpmock = "0.8.3"
predicates = "3.1.4"


[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.fast]
inherits = "release"
lto = 'thin'
codegen-units = 16
